--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <iframe src="1.html"></iframe>
         </div>
         <div class="slide">
+            <iframe src="image/1.png"></iframe>
+        </div>
+        <div class="slide">
+            <iframe src="image/2.png"></iframe>
+        </div>
+        <div class="slide">
             <iframe src="2.html"></iframe>
         </div>
         <div class="slide">
@@ -79,6 +85,9 @@
         </div>
         <div class="slide">
             <iframe src="7.html"></iframe>
+        </div>
+        <div class="slide">
+            <iframe src="image/3.png"></iframe>
         </div>
         <div class="slide">
             <iframe src="8.html"></iframe>
